; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/qedr/extr_verbs.c_consume_cqe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/qedr/extr_verbs.c_consume_cqe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qedr_cq = type { i64, i64, i32, i32 }

@RDMA_CQE_REQUESTER_TOGGLE_BIT_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.qedr_cq*)* @consume_cqe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @consume_cqe(%struct.qedr_cq* %0) #0 {
  %2 = alloca %struct.qedr_cq*, align 8
  store %struct.qedr_cq* %0, %struct.qedr_cq** %2, align 8
  %3 = load %struct.qedr_cq*, %struct.qedr_cq** %2, align 8
  %4 = getelementptr inbounds %struct.qedr_cq, %struct.qedr_cq* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.qedr_cq*, %struct.qedr_cq** %2, align 8
  %7 = getelementptr inbounds %struct.qedr_cq, %struct.qedr_cq* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp eq i64 %5, %8
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load i32, i32* @RDMA_CQE_REQUESTER_TOGGLE_BIT_MASK, align 4
  %12 = load %struct.qedr_cq*, %struct.qedr_cq** %2, align 8
  %13 = getelementptr inbounds %struct.qedr_cq, %struct.qedr_cq* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = xor i32 %14, %11
  store i32 %15, i32* %13, align 4
  br label %16

16:                                               ; preds = %10, %1
  %17 = load %struct.qedr_cq*, %struct.qedr_cq** %2, align 8
  %18 = getelementptr inbounds %struct.qedr_cq, %struct.qedr_cq* %17, i32 0, i32 2
  %19 = call i64 @qed_chain_consume(i32* %18)
  %20 = load %struct.qedr_cq*, %struct.qedr_cq** %2, align 8
  %21 = getelementptr inbounds %struct.qedr_cq, %struct.qedr_cq* %20, i32 0, i32 0
  store i64 %19, i64* %21, align 8
  ret void
}

declare dso_local i64 @qed_chain_consume(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
